--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -4,7 +4,8 @@ on:
   workflow_dispatch:
   push:
     branches: [ main ]
-
+  schedule:
+    - cron: '00 23 * *'
 
 env:
   ALIYUN_REGISTRY: "${{ secrets.ALIYUN_REGISTRY }}"
@@ -153,5 +154,6 @@ jobs:
             echo "=============================================================================="
             df -hT
             echo "=============================================================================="     
+
             
         done < images.txt
